# classy_bench

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: example.ipynb
src/classy_bench/: __init__.py  _benchmark_config.py  _config.py  _defaults.py  _experiment_analytics.py  _experiments_utils.py  _instance_info.py  _results.py  _runner.py  default_config.json  logging_utils.py  typing.py  utils.py
src/classy_bench/models/biencoder/: evaluate.py  preprocess.py  train.py
src/classy_bench/models/bm25/: evaluate.py  preprocess.py  train.py
src/classy_bench/models/class_tfidf/: evaluate.py  preprocess.py  requirements.txt  train.py
src/classy_bench/models/crossencoder/: evaluate.py  preprocess.py  requirements.txt  train.py
src/classy_bench/models/doc_tfidf/: evaluate.py  preprocess.py  train.py
src/classy_bench/models/roberta/: evaluate.py  preprocess.py  requirements.txt  train.py
src/classy_bench/models/t5/: evaluate.py  preprocess.py  requirements.txt  train.py
tests/: conftest.py  test_benchmark_config.py  test_config.json  test_defaults.py  test_experiment_utils.py  test_instance_info.py  test_results.py  testing_utils.py
tests/data/: dev.csv  label_classes.csv  test.csv  train.csv
tests/models/: test_biencoder.py  test_bm25.py  test_class_tfidf.py  test_crossencoder.py  test_doc_tfidf.py  test_roberta.py  test_t5.py
tests/models/biencoder/: expected_preprocess_output_train.csv
tests/models/bm25/: expected_preprocess_output_train.csv
tests/models/roberta/: expected_preprocess_output_train.csv
tests/models/t5/: expected_preprocess_output_train.csv
